# inertia-deferred-props

./: .env.example  .gitignore  Cargo.toml  package-lock.json  package.json  readme.md  svelte.config.js  tsconfig.json  tsconfig.svelte.json  vite.config.ts
src/: file_session.rs  helpers.rs  inertia.rs  main.rs  routes.rs  vite.rs
src/entities/: user.rs
src/middlewares/: garbage_collector.rs  inertia_reflasher.rs  mod.rs
www/: app.css  app.tsx  react-app.tsx  root.hbs  svelte-app.ts  vue-app.ts
www/components/: custom-deferred.svelte  deferred.tsx
www/components/svelte/: deferred-skeleton.svelte  user-card.svelte
www/components/vue/: deferred-skeleton.vue  user-card.vue
www/layouts/: default.svelte  default.tsx  default.vue
www/pages/: built-in-deferred.svelte  built-in-deferred.tsx  built-in-deferred.vue  custom-deferred.svelte  custom-deferred.tsx  index.svelte  index.tsx  index.vue
