[package]
name = "inertia-deferred-props"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-session = "0.10.1"
chrono = "0.4.39"
tokio = { version = "1.42", features = ["io-std", "fs"]}
log = "0.4"
anyhow = "1.0.95"
actix-web-lab = "0.23"
serde_json = "1.0"
rand = "0.9"
inertia-rust = { version = "2", features = ["actix", "vite-hbs-template-resolver"] }
vite-rust = { version = "0.2" }
serde = "1"
dotenvy = "0.15.7"
actix-files = "=0.6.6"
